    [gtk3] task progress pulse don't show percent
    debian package add XXXXXXXX to mktemp template [dist]
    add key shortcut labels to Prefs default drag action
    left-click in toolbar config menu shows design menu
    fix Open|Default with multiple dirs selected
    gtk3 leaving beta; gtk3 debian package; ppa add spacefm-gtk3
    navigation/activation keys on desktop #247
0.8.4   2012-12-21:
    fix detail dbl click selects next #218
    fix dlg command pipe fast
    added task property popup_handler; man update
    added task list Show Output
    internal socket cmds show and focus NAME optional to present dlg
    Dialog add [SAVEFILE] argument to --viewer
    fix text wrapping corner case #206 [BwackNinja]
    Added context for several strings #220
    fix left-click ignored in context menu #31 #228
    [gtk3] add expand property to app chooser dlg for gtk3 #223
    Dialog --chooser --save DIR opens in DIR
    [gtk3] Dialog label wrap min width closes BwackNinja issue #25
    Dialog send stdout of external commands to /dev/null
    socket add props edit_file and run_in_terminal
    [gtk3] create archive dlg expand options entry
    dbus and libdbus dependency changed to optional
    main-window.c include wait.h #239
0.8.3   2012-11-24:
    added --socket-cmd #142
    added View|Events menu
    stop elapsed timer during overwrite query
    vfs no report access errors during total size
    configure --disable-pixmaps is now the default
    added beta test --with-gtk3 build option (merge gtk3 branch)
    updated README with BUILD GTK3 BETA instructions
    allow ctrl-rubberband add to selection #46 [BWackNinja]
    reduce spacing of icon and compact modes #188 [BWackNinja]
    automatic orient thumbnails #183 [BWackNinja]
    add wallpaper Zoom mode #4 [BWackNinja]
    fix icon label centering #51 [BWackNinja]
    fix icon/compact cannot drag multiple #194
    restore Prefs SI File Sizes #117