@@ -714,8 +714,10 @@ Application Options:
   -f, --find-files             Show File Search
   --set-wallpaper              Set desktop wallpaper to FILE
   -g, --dialog                 Show a custom dialog (See <a href="#dialog">-g help</a>)
+  -s, --socket-cmd             Send a socket command (See <a href="#sockets">-s help</a>)
   --profile=PROFILE            No function - for compatibility only
   --no-desktop                 No function - for compatibility only
+  --version                    Show version information
   --display=DISPLAY            X display to use</pre>
 
 <p>Normally, your session file and other user files are saved in <a href="#programfiles-home">~/.config/spacefm/</a>  To make SpaceFM read and save your files in another folder (~/.config/spacefm-alt in this example), stop ALL <i>instances</i> of SpaceFM and run:
@@ -1101,6 +1103,8 @@ and you Ctrl+Click on the name 'share', SpaceFM will change to directory /usr/sh
 Any entry in the Path Bar which looks like a protocol, such as <i>ftp://mirrors.kernel.org/</i>, will be opened with the Protocol Handler.  By default, SpaceFM uses <a href="http://ignorantguru.github.com/udevil/">udevil</a> as the handler, unless a <a href="#gui-pathbar-protohand">custom Protocol Handler</a> has been configured.  If udevil recognizes the protocol, it will be mounted and SpaceFM will automatically open the mount point directory (in most cases).  If the <a href="#devices-list">Devices List</a> has option <a href="#devices-settings-net">Settings|Show|Mounted Networks</a> checked, the new network filesystem will be listed.
 
 <p>Information like username, password, port, etc may also be included in the URL - see <a href="http://ignorantguru.github.com/udevil/udevil--help.html">URL protocols and formats handled by udevil</a>.
+
+<p><b>WARNING:  Including a password in the URL is a very unsafe mode of use</b>, as your password is included in the command line and may be written to temporary and/or system files by SpaceFM or mount helpers.  See documentation specific to the filesystem for other authentication methods offered, or enter your password when prompted.
 
 <p>TIP:  You can right-click on a mounted network in the <a href="#devices-list">Devices List</a> and select <a href="#devices-menu-bookmark">Bookmark</a> to bookmark the URL for future use.
 
@@ -2316,9 +2320,17 @@ The Popups submenu is used to configure the Task Manager's behavior for opening 
 
 <!-- # Popups|Stay On Top #poptop -->
 <p><a name="tasks-menu-poptop"/><a href="#tasks-menu-poptop"><b>Popups|Stay On Top</b></a><br>
-If option Stay On Top is checked, any task's <a href="#tasks-dlg">popup dialog</a>, whether opened automatically or manually, will stay on top of the SpaceFM window.  However, you can still click on visible portions of the main window.
+If option Stay On Top is checked, any task's <a href="#tasks-dlg">popup dialog</a>, whether opened automatically or manually, will stay on top of the SpaceFM window.  However, you can still click on visible portions of the main window.  Changing this setting has no effect on dialogs which are already open.
 
 <p>If unchecked, popup dialogs may be placed beneath the main window.
+
+<!-- # Popups|Above Others #popabove -->
+<p><a name="tasks-menu-popabove"/><a href="#tasks-menu-popabove"><b>Popups|Above Others</b></a><br>
+If option Above Others is checked, any task's <a href="#tasks-dlg">popup dialog</a> will be kept above all other windows when initially shown.  Note that some window managers do not support keeping windows above others, and your window manager settings may override this behavior.
+
+<!-- # Popups|All Workspaces #popstick -->
+<p><a name="tasks-menu-popstick"/><a href="#tasks-menu-popstick"><b>Popups|All Workspaces</b></a><br>
+If option All Workspaces is checked, any task's <a href="#tasks-dlg">popup dialog</a> will appear on all workspaces/desktops (will be set as sticky) when initially shown.  Note that some window managers do not support sticking windows, and your window manager settings may override this behavior.
 
 <!-- # Popups|Detailed Stats #popdet -->
 <p><a name="tasks-menu-popdet"/><a href="#tasks-menu-popdet"><b>Popups|Detailed Stats</b></a><br>
@@ -2463,7 +2475,7 @@ Note that the PID of the task refers to the initial process started by SpaceFM. 
 <td valign="top">
 <a name="tasks-dlg"/><a href="#tasks-dlg"><font size=+2>Popup Dialog </font></a>
 <!-- @Tasks @Popup Dialog #dlg -->
-<p>A single left-click on a task listed in the <a href="#tasks-man">Task Manager</a> will open a popup dialog showing stats, a progress bar, and an output monitor.  Popup dialogs may also be automatically shown when errors occur, if option <a href="#tasks-menu-popall">View|Tasks|Popups|Popup All Tasks</a> is checked, or based on a custom command's <a href="#designmode-command-popup">popup settings</a>.
+<p>A single left-click on a task listed in the <a href="#tasks-man">Task Manager</a> will open a popup dialog showing stats, a progress bar, and an output monitor.  Popup dialogs may also be automatically shown when errors occur, if option <a href="#tasks-menu-popall">View|Tasks|Popups|Popup All Tasks</a> is checked, or based on a custom command's <a href="#designmode-command-popup">popup settings</a>.  The popup dialog's relationship to other windows may be controlled with options <a href="#tasks-menu-poptop">View|Tasks|Popups|Stay On Top</a>, <a href="#tasks-menu-popabove">Above Others</a>, and <a href="#tasks-menu-popstick">All Workspaces</a>.
 
 <p><b>For internal tasks</b>, the popup dialog will show the task's job ("Copy", etc), the current file being processed, the destination directory, brief or detailed <a href="#tasks-menu-popdet">stats</a>, the status of the task ("Paused", etc), a progress bar, an output monitor used to show the details of any errors which have occured, and overwrite and error mode controls.
 
@@ -3322,11 +3334,11 @@ The Scroll option, which is checked by default for new commands, determines the 
 
 <p>SpaceFM includes two primary toolbars: the main Toolbar (which is divided into a Left Toolbar, <a href="#gui-pathbar">Path Bar</a>, and Right Toolbar) and a Side Toolbar.  To show or hide the Toolbar or Side Toolbar, right-click on the file list and check or uncheck View|Toolbar or View|Side Toolbar.
 
-<p>Toolbars can also be customized using <a href="#designmode">Design Mode</a>.  Although you cannot right-click directly on a toolbar, each toolbar has a config menu for the purpose of customization.  Making changes to a toolbar's config menu will automatically change the items in the toolbar.
+<p>Toolbars can also be customized using <a href="#designmode">Design Mode</a>.  Although you cannot right-click directly on a toolbar icon, each toolbar has a config menu for the purpose of customization.  Making changes to a toolbar's config menu will automatically change the items in the toolbar.
 
 <p>To access a toolbar's config menu, click the leftmost icon on the toolbar (at the far left of the panel).  The 'Left Toolbar' config menu is used to customize the toolbar to the left of the <a href="#gui-pathbar">Path Bar</a>, and 'Right Toolbar' is used to customize the toolbar to the right.  The 'Side Toolbar' menu configures the Side Toolbar.
 
-<p>In these menus, Design Mode works as always - use right-click or F2 to open the Design Menu for any highlighted item.  But there are a few differences in these menus.
+<p>In these menus, Design Mode works as always - use right-click or F2 to open the Design Menu for any highlighted item, or simply left-click the item.  But there are a few differences in these menus.
 
 <p>Toolbar config menus show <i>all</i> available tool items, with an asterisk (*) next to the name of currently shown items, and no asterisk next to the name of hidden items.  When opening the Design Menu on a toolbar config menu item, the topmost item will be <a href="#designmode-designmenu-show">Show</a>.  If checked, the tool item will be shown in the toolbar.  If unchecked, the tool item will be hidden.
 
@@ -4577,6 +4589,9 @@ The file is watched for changes.  To later update the value of the progress bar:
 
 Or, the progress bar will advance one pulse step each time you run:
 <pre>    echo pulse > /tmp/dialog-progress</pre>
+
+Or, the progress bar will pulsate automatically if you run:
+<pre>    echo auto-pulse > /tmp/dialog-progress</pre>
 
 Or, you can set additional text to appear in the progress bar:
 <pre>    echo "25 % copying" > /tmp/dialog-progress</pre>
@@ -6176,7 +6191,7 @@ Usage: <b>spacefm -s remove-event EVENT COMMAND ...</b>
 <!-- @Sockets @Events -->
 <p>Events represent actions or changes in the GUI, such as the user closing a tab, selecting a file, or opening a new window.  SpaceFM has built-in handlers for these events, which update the GUI, open menus, or take other actions.  You can also add your own handlers for events, commands which are run to take a custom action after the event occurs.  In some cases your custom handler can replace the action normally taken by SpaceFM's built-in handler, allowing you to modify the default behavior in the GUI.
 
-<p>Event handlers can be added in the <a href="#sockets-menu">Events Menu</a>.  Those handler commands always run until you remove them.  Dynamic event handlers can also be added using the <a href="#sockets-methods-add-event">add-event</a> or <a href="#sockets-methods-remove-event">remove-event</a> socket methods.  These handlers will remain in effect until you remove them with the remove-event method, or until the SpaceFM instance exits.
+<p>Event handlers can be added in the <a href="#sockets-menu">Events Menu</a>.  Those handler commands always run until you remove them.  Dynamic event handlers can also be added using the <a href="#sockets-methods-add-event">add-event</a> or <a href="#sockets-methods-replace-event">replace-event</a> socket methods.  These handlers will remain in effect until you remove them with the remove-event method, or until the SpaceFM instance exits.
 
 <p>The following events are available.  The name in parentheses is the event name as found in the <a href="#sockets-menu">Events Menu</a>.  Any <a href="#evtsub">event substitution variables</a> available with the event are shown after it (eg %e).
 
@@ -6597,11 +6612,11 @@ Additional MIME types provided by libmimetype, adding globs for some missing but
 <center>
 <p><b>This document is under construction and incomplete.</b>
 
-<p>Copyright (C) 2012
+<p>Copyright (C) 2013
 
 <p>DISCLAIMER:  While the authors, copyright holders, and maintainers of this software endeavour to keep all content up to date and valuable, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the software or the information, communications, products, services, or related graphics for any purpose. Any reliance you place on such content is therefore strictly AT YOUR OWN RISK.<br>
 <br>
-<p>Updated 2012-12-21&nbsp;&nbsp;(SpaceFM version 0.8.4)
+<p>Updated 2013-01-09&nbsp;&nbsp;(SpaceFM version 0.8.4+)
 <br><br>
 </center>
 </td></tr></table>
