@@ -8,6 +8,7 @@
     fix Open|Default with multiple dirs selected
     gtk3 leaving beta; gtk3 debian package; ppa add spacefm-gtk3
     navigation/activation keys on desktop #247
+    added Popups|Above Others and All Workspaces #226
 0.8.4   2012-12-21:
     fix detail dbl click selects next #218
     fix dlg command pipe fast
